--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,13 @@
   padding: 2rem;
   text-align: center;
 }
+
+body {
+  background: #833ab4;
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
+}
