--- a/src/components/SidebarMenu/MenuItem/MenuItem.css
+++ b/src/components/SidebarMenu/MenuItem/MenuItem.css
@@ -2,7 +2,7 @@
   font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: left;
-  margin: 15px 0;
+  margin: 10px 0 10px 20px;
 }
 
 .item {
@@ -14,9 +14,15 @@
   text-align: left;
 }
 
+.item > img {
+  height: 20px;
+  width: 20px;
+  margin: 0 10px;
+}
+
 .item:hover,
 .subItem:hover {
-  text-shadow: 0 0 3px rgb(90, 90, 90);
+  text-shadow: 0 0 3px rgb(153, 153, 153);
   transition: text-shadow 0.2s ease;
   cursor: pointer;
 }
