--- a/src/components/SidebarMenu/SidebarMenu.css
+++ b/src/components/SidebarMenu/SidebarMenu.css
@@ -5,11 +5,14 @@
   height: 100vh;
   width: 300px;
   background-color: white;
-  padding: 100px 20px;
+  padding: 30px 20px;
   overflow-y: auto;
   transition: 850ms;
-  box-shadow: 0 0 5px rgb(49, 49, 49);
+  box-shadow: 0 0 5px rgb(248, 248, 248);
+  display: flex;
+  flex-direction: column;
 }
+
 .sidebar.active {
   right: 0;
   transition: 350ms;
@@ -19,14 +22,17 @@
   position: fixed;
   top: 0;
   right: 0;
+  height: 100vh;
+  background-color: black;
+  box-shadow: 0 0 5px rgb(49, 49, 49);
+  width: 60px;
 }
 
 .openButton {
-  height: 50px;
-  width: 50px;
-  border-radius: 10px;
-  border: 1px solid grey;
-  box-shadow: 0 0 5px grey;
+  height: 60px;
+  width: 60px;
+  border: none;
+  background: none;
   cursor: pointer;
 }
 
@@ -34,6 +40,7 @@
   height: 30px;
   width: 30px;
   padding: 5px;
+  color: white;
 }
 
 .overlay {
@@ -48,4 +55,23 @@
 .overlay.show {
   opacity: 1;
   pointer-events: all;
+}
+
+.titleContainer {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.titleContainer > img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  text-align: left;
 }
